// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<BodyText /> that it renders correctly 1`] = `
.c0 {
  margin-bottom: 0;
  -webkit-text-decoration: none;
  text-decoration: none;
  margin-bottom: 0;
  font-size: 18px;
  line-height: 1.12;
}

<BodyText
  size="regular"
>
  <TextPrimitive
    color="black"
    element="p"
    size="regular"
    spacing="none"
    variant="p"
    weight="light"
  >
    <Paragraph
      color="black"
      element="p"
      size="regular"
      spacing="none"
      underline={false}
      weight="light"
    >
      <Primitive
        className="c0"
        color="black"
        element="p"
        size="regular"
        spacing="none"
        underline={false}
        weight="light"
      >
        <p
          className="c0"
        >
          Regular size
        </p>
      </Primitive>
    </Paragraph>
  </TextPrimitive>
</BodyText>
`;

exports[`<BodyText /> that it renders correctly with element prop 1`] = `
.c0 {
  margin-bottom: 0;
  -webkit-text-decoration: none;
  text-decoration: none;
  margin-bottom: 0;
  font-size: 18px;
  line-height: 1.12;
}

<BodyText
  element="span"
>
  <TextPrimitive
    color="black"
    element="span"
    size="regular"
    spacing="none"
    variant="p"
    weight="light"
  >
    <Paragraph
      color="black"
      element="span"
      size="regular"
      spacing="none"
      underline={false}
      weight="light"
    >
      <Primitive
        className="c0"
        color="black"
        element="span"
        size="regular"
        spacing="none"
        underline={false}
        weight="light"
      >
        <span
          className="c0"
        >
          Element Prop Test
        </span>
      </Primitive>
    </Paragraph>
  </TextPrimitive>
</BodyText>
`;

exports[`<BodyText /> that it renders correctly with spacing prop 1`] = `
.c0 {
  margin-bottom: 20px;
  -webkit-text-decoration: none;
  text-decoration: none;
  font-size: 18px;
  line-height: 1.12;
}

<BodyText
  spacing="md"
>
  <TextPrimitive
    color="black"
    element="p"
    size="regular"
    spacing="md"
    variant="p"
    weight="light"
  >
    <Paragraph
      color="black"
      element="p"
      size="regular"
      spacing="md"
      underline={false}
      weight="light"
    >
      <Primitive
        className="c0"
        color="black"
        element="p"
        size="regular"
        spacing="md"
        underline={false}
        weight="light"
      >
        <p
          className="c0"
        >
          Spacing Prop Test
        </p>
      </Primitive>
    </Paragraph>
  </TextPrimitive>
</BodyText>
`;
